--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
         <div id="proposal-screen" class="hidden">
             <div class="gif-container">
-                <img id="main-image" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmM2Z3I4bHcwMXN3cGF3cW13anB5aHl4b3c1b3c5/LqOWJm/giphy.gif" alt="Cute Cat">
+                <img id="main-image" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGR5Yzg3c3I4ZW5od3U0OTZiY2pobHF4eWRxNzFmOXA4aDQ1djQ0OSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/J3PtppTjjrvnGvRGcY/giphy.gif" alt="Psyduck Confused">
             </div>
             <h1 id="question">Niki, will you be my valentine?</h1>
             <div class="buttons">
@@ -276,7 +276,7 @@
         function sheSaidYes() {
             document.getElementById('question').innerText = "YAY! I love you! ❤️";
             document.querySelector('.buttons').style.display = 'none';
-            document.getElementById('main-image').src = "https://media.giphy.com/media/UBOnpTohQClRYDDgTJ/giphy.gif"; 
+            document.getElementById('main-image').src = "https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3cmlyN2Y1cDlxeGFnMHU3YWRjODQyMWl4bWh4YTlnaTNrN3RmczZ4byZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/sesCxOcQA30zublkTR/giphy.gif"; 
             confetti();
         }
     </script>
